--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,11 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Nature illustration"
+    url: http://fieldnotes.eyster.com/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Photos"
+    url: /photos/
