--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Harold Eyster"
 title_separator          : "-"
 name                     : &name "Harold Eyster"
-description              : &description "PhD student at the University of British Columbia"
+description              : &description "PhD candidate at the University of British Columbia"
 url                      : https://hneyster.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hneyster.github.io"
