--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Publications"
-   url: https://scholar.google.com/citations?user=KYnBYyMAAAAJ&hl=en
+    url: https://scholar.google.com/citations?user=KYnBYyMAAAAJ&hl=en/
    # url: /publications/
 
   - title: "Talks"
