adding rsch page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: https://scholar.google.com/citations?user=KYnBYyMAAAAJ&hl=en/
    # url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+ #   url: /talks/    
 
   #- title: "Teaching"
    # url: /teaching/    
