--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: http://fieldnotes.eyster.com/
     
   - title: "CV"
-    url: /files/H_Eyster_CV.pdf/
+    url: /files/H_Eyster_CV.pdf
     
  # - title: "Photos"
  #   url: /photos/
