--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dr. Harold Eyster"
 title_separator          : "-"
 name                     : &name "Dr. Harold Eyster"
-description              : &description "Gund Postdoctoral Fellow, University of Vermont & Applied Climate Science Fellow, The Nature Conservancy""
+description              : &description "Gund Postdoctoral Fellow, University of Vermont & Applied Climate Science Fellow, The Nature Conservancy"
 url                      : https://hneyster.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hneyster.github.io"
