--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Harold Eyster"
   avatar           : "profile.png"
-  bio              : "Gund Postdoctoral Fellow at the University of Vermont "
+  bio              : "Gund Postdoctoral Fellow at the University of Vermont, and Applied Climate Scientist, The Nature Conservancy, Colorado "
   location         : "Boulder, CO & Burlington, VT"
   employer         :
   googlescholar    : https://scholar.google.com/citations?user=KYnBYyMAAAAJ&hl=en
