--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   instagram        : "eysterart/"
   lastfm           :
   linkedin         :
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
