--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
    # url: /teaching/    
     
   - title: "Nature illustration"
-    url: http://fieldnotes.eyster.com/
+    url: https://fieldnotes.eyster.com/
     
   - title: "CV"
     url: /files/H_Eyster_CV.pdf
