updating from nuthatch

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #- title: "Teaching"
    # url: /teaching/    
     
-  - title: "Nature illustration"
+  - title: "Nature Illustration"
     url: https://fieldnotes.eyster.com/
     
 #  - title: "CV"
