--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dr. Harold Eyster"
 title_separator          : "-"
 name                     : &name "Dr. Harold Eyster"
-description              : &description "Applied Climate Science Fellow, The Nature Conservancy"
+description              : &description "Climate and Land-use Analyst, The Nature Conservancy"
 url                      : https://hneyster.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hneyster.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Harold Eyster"
   avatar           : "profile.png"
-  bio              : "Gund Postdoctoral Fellow at the University of Vermont, and Applied Climate Scientist, The Nature Conservancy, Colorado "
+  bio              : "Climate and Land-use Analyst, The Nature Conservancy, Colorado "
   location         : "Boulder, CO"
   employer         :
   googlescholar    : https://scholar.google.com/citations?user=KYnBYyMAAAAJ&hl=en
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        : "eysterart/"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/harold-eyster/"
   orcid            : "https://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
